v0.0.1.3: remove refresh and access token origin from all responses
